fix GET tweet/{tw_id} response schema
