# swagger.json
@@ -116,7 +116,10 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Tweet"
+                        }
                     },
                     "400": {
                         "description": "Bad Request (body is too short or the tweet you replied to is missing)",
